# vMAP

./: .gitignore  environment.yml  imap.py  imap_ros.py  vmap.py
configs/ROS/: config_ros_lab3_iMAP.json
configs/Replica/: config_replica_room0_iMAP.json
imap_ros/: CMakeLists.txt  package.xml
imap_ros/launch/: imap.launch
imap_ros/src/: IMap.py  dataset_publisher.py  imap_ros.py  imap_ros_node.py
logs/iMAP/room0/: config_replica_room0_iMAP.json
logs/vMAP/room0/: config_replica_room0_vMAP.json
