<?xml version="1.0"?>
<package format="2">
  <name>imap_ros_node</name>
  <version>0.0.1</version>
  <description>
     imap ros node
  </description>
  
  <author email="russell.buchanan@ed.ac.uk">Russell Buchanan</author>

  <maintainer email="russell.buchanan@ed.ac.uk">Russell Buchanan</maintainer>

  <license>Proprietary</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


</package>

